--- a/src/views/partials/sidebar.ejs
+++ b/src/views/partials/sidebar.ejs
@@ -13,39 +13,27 @@
         </a>
       </li>
 
-      <!-- <li class="nav-item mx-2">
-        <a href="/register" <% if(page === 'register_sekolah'){ %>class="nav-link active row"<% } else { %>class="nav-link row"<% } %> >
-          <i class="bi bi-pencil-square col-1 px-0 ms-2"></i>         
-          <span class="fms fw-normal col-9 px-0 ms-2">Register Sekolah</span>
-        </a>
-      </li> -->
-
       <li class="nav-item mx-2">
         <a href="/list" <% if(page === 'list_sekolah'){ %>class="nav-link active row"<% } else { %>class="nav-link row"<% } %> >
           <i class="bi bi-list-columns-reverse col-1 px-0 ms-2"></i>          
           <span class="fms fw-normal col-9 px-0 ms-2">List Sekolah</span>
         </a>
       </li>
+
       <!-- <li class="nav-item mx-2">
-        <a href="/listlaporan" <% if(page === 'list_laporan'){ %>class="nav-link active row"<% } else { %>class="nav-link row"<% } %> >
+        <a href="/listunsync" <% if(page === 'list_sudah_sinkron'){ %>class="nav-link active row"<% } else { %>class="nav-link row"<% } %> >
           <i class="bi bi-list-columns-reverse col-1 px-0 ms-2"></i>          
-          <span class="fms fw-normal col-9 px-0 ms-2">List Laporan</span>
+          <span class="fms fw-normal col-9 px-0 ms-2">sudah tersinkron</span>
         </a>
       </li> -->
+        
+      <li class="nav-item mx-2">
+        <a href="/listperiod" <% if(page === 'list_period'){ %>class="nav-link active row"<% } else { %>class="nav-link row"<% } %> >
+          <i class="bi bi-calendar-week-fill col-1 px-0 ms-2"></i>          
+          <span class="fms fw-normal col-9 px-0 ms-2">list Period</span>
+        </a>
+      </li>
 
-      <!-- <li class="nav-item mx-2">
-        <a href="/penerimaan" <% if(page === 'inPenerimaan'){ %>class="nav-link active row"<% } else { %>class="nav-link row"<% } %> >
-          <i class="bi bi-bag-plus-fill col-1 px-0 ms-2"></i>          
-          <span class="fms fw-normal col-9 px-0 ms-2">Input Penerimaan</span>
-        </a>
-      </li> -->
-
-      <!-- <li class="nav-item mx-2">
-        <a href="/pengeluaran" <% if(page === 'inPengeluaran'){ %>class="nav-link active row"<% } else { %>class="nav-link row"<% } %> >
-          <i class="bi bi-bag-dash-fill col-1 px-0 ms-2"></i>          
-          <span class="fms fw-normal col-9 px-0 ms-2">Input Pengeluaran</span>
-        </a>
-      </li> -->
     </ul>
 </div>
     
